better game over menu 1 and 2 player