@@ -2,15 +2,18 @@ package com.pandavoid.snakegame.ui;
 
 import com.pandavoid.snakegame.Logger;
 import com.pandavoid.snakegame.Main;
+import com.pandavoid.snakegame.core.snake.Snake;
 import com.pandavoid.snakegame.enums.LogType;
 
+import javax.swing.*;
 import java.awt.*;
 import java.awt.event.ActionListener;
+import java.util.ArrayList;
 
 public class GameOverWindow {
     private final Window window;
-    private static final short height = 500;
-    private static final short width = 400;
+    private static final short height = 550;
+    private static final short width = 450;
     private final int Players;
     public GameOverWindow(Point MainWindowPos, int MainWindowWidth, int MainWindowHeight) {
         Logger.info(LogType.DISPLAY,"MainWindowPos" + MainWindowPos);
@@ -20,17 +23,21 @@ public class GameOverWindow {
         window.setPosition(new Point(MainWindowPos.x+MainWindowWidth/2-width/2,MainWindowPos.y+MainWindowHeight/2-height/2));
         window.hideControls();
         window.createLabel(Main.getLocaleText("gameOver.gameOverLabel"), 35, 0, 0, 3);
+        ArrayList<Stats> statslist = new ArrayList<>();
+        for (Snake snake : Main.getGame().getSnakes()) {
+            statslist.add(snake.getStats());
+        }
         if (Players == 1) {
             int Score1 = Main.getGame().getSnakes().get(0).getScore();
-            window.createLabel(Main.getLocaleText("gameOver.scoreLabel")+Score1, 15, 0, 1, 2);
+            window.createLabel(Main.getLocaleText("gameOver.appleEaten")+statslist.getFirst().getApplesEaten(), 15, 0, 1, 3);
+            window.createLabel(Main.getLocaleText("gameOver.goldenApplesEaten")+statslist.getFirst().getGoldenApplesEaten()+" (X2)", 15, 0, 2, 3);
+            window.createLabel(Main.getLocaleText("gameOver.total")+statslist.getFirst().getTotalScore(), 15, 0, 3, 3);
         }
         else{
             int bonus1 = Main.getGame().getSnakes().get(0).getAliveBonus();
             int bonus2 = Main.getGame().getSnakes().get(1).getAliveBonus();
-            int Score1 = Main.getGame().getSnakes().get(0).getScore();
-            int Score2 = Main.getGame().getSnakes().get(1).getScore();
-            int totalScore1 = bonus1+Score1;
-            int totalScore2 = bonus2+Score2;
+            int totalScore1 = bonus1+statslist.getFirst().getTotalScore();
+            int totalScore2 = bonus2+statslist.getFirst().getTotalScore();
             if (totalScore1>totalScore2) {
                 window.createLabel(Main.getLocaleText("gameOver.winner1"), 20, 0, 1, 3);
             }else if (totalScore2>totalScore1) {
@@ -42,24 +49,27 @@ public class GameOverWindow {
             window.createLabel("----------------", 15, 2, 2, 1);
             window.createLabel(Main.getLocaleText("gameOver.player1"), 15, 0, 3, 1);
             window.createLabel("|", 15, 1, 3, 1);
-            window.createLabel(Main.getLocaleText("gameOver.appleEaten")+Score1, 15, 0, 4, 1);
+            window.createLabel(Main.getLocaleText("gameOver.appleEaten")+statslist.getFirst().getApplesEaten(), 15, 0, 4, 1);
             window.createLabel("|", 15, 1, 4, 1);
+            window.createLabel(Main.getLocaleText("gameOver.goldenApplesEaten")+statslist.getFirst().getGoldenApplesEaten()+"(X2)", 15, 0, 5, 1);
             if (bonus1>0) {
-                window.createLabel(Main.getLocaleText("gameOver.didntDie")+bonus1, 15, 0, 5, 1);
+                window.createLabel(Main.getLocaleText("gameOver.didntDie")+bonus1, 15, 0, 6, 1);
             }else{
-                window.createLabel(Main.getLocaleText("gameOver.noBonus"), 15, 0, 5, 1);
+                window.createLabel(Main.getLocaleText("gameOver.noBonus"), 15, 0, 6, 1);
             }
             window.createLabel("|", 15, 1, 5, 1);
-            window.createLabel(Main.getLocaleText("gameOver.total")+totalScore1, 15, 0, 6, 1);
+            window.createLabel(Main.getLocaleText("gameOver.total")+totalScore1, 15, 0, 7, 1);
             window.createLabel("|", 15, 1, 6, 1);
             window.createLabel(Main.getLocaleText("gameOver.player2"), 15, 2, 3, 1);
-            window.createLabel(Main.getLocaleText("gameOver.appleEaten")+Score2, 15, 2, 4, 1);
+            window.createLabel(Main.getLocaleText("gameOver.appleEaten")+statslist.getFirst().getApplesEaten(), 15, 2, 4, 1);
+            window.createLabel(Main.getLocaleText("gameOver.goldenApplesEaten")+statslist.getFirst().getGoldenApplesEaten()+"(X2)", 15, 2, 5, 1);
+            window.createLabel("|", 15, 1, 7, 1);
             if (bonus2>0) {
-                window.createLabel(Main.getLocaleText("gameOver.didntDie")+bonus2, 15, 2, 5, 1);
+                window.createLabel(Main.getLocaleText("gameOver.didntDie")+bonus2, 15, 2, 6, 1);
             }else{
-                window.createLabel(Main.getLocaleText("gameOver.noBonus"), 15, 2, 5, 1);
+                window.createLabel(Main.getLocaleText("gameOver.noBonus"), 15, 2, 6, 1);
             }
-            window.createLabel(Main.getLocaleText("gameOver.total")+totalScore2, 15, 2, 6, 1);
+            window.createLabel(Main.getLocaleText("gameOver.total")+totalScore2, 15, 2, 7, 1);
 
         }
         ActionListener ToMainListener = e-> Main.gameOverWindowToMainWindow();
